avanzando con el formulario

--- a/web/index.html
+++ b/web/index.html
@@ -10,14 +10,80 @@
     <script src="./js/utils/include.js"></script>
     <title>Professional Gallery</title>
 </head>
-<body>
+<body class="body-style">
 
 <header>
     <nav> </nav>
 </header>
 
 <main>
+    <h1>Professional Gallery</h1>
+    <a href="upload_picture.html">Upload new pictures</a>
+    <div class="gallery-container">
+        <div class="photo-block">
 
+        <div class="photo-header-block">
+            <h2 class="photo-title">Samoyed</h2>
+            <h3 class="photo-score">SCORE: 4.6</h3>
+        </div>
+
+        <div class="photo-image-block">
+            <img class="photo-image" src="https://i.ibb.co/tY1Jcnc/wlZCfCv.jpg" alt="DOG">
+        </div>
+
+        <div class="photo-metadata-block">
+            <p class="photo-description">A very good boy.</p>
+        </div>
+
+        <div class="photo-edit-block">
+            <button>Edit this photo</button>
+            <button>Delete this photo</button>
+        </div>
+
+    </div>
+        <div class="photo-block">
+
+            <div class="photo-header-block">
+                <h2 class="photo-title">Samoyed</h2>
+                <h3 class="photo-score">SCORE: 4.6</h3>
+            </div>
+
+            <div class="photo-image-block">
+                <img class="photo-image" src="https://i.ibb.co/tY1Jcnc/wlZCfCv.jpg" alt="DOG">
+            </div>
+
+            <div class="photo-metadata-block">
+                <p class="photo-description">A very good boy.</p>
+            </div>
+
+            <div class="photo-edit-block">
+                <button>Edit this photo</button>
+                <button>Delete this photo</button>
+            </div>
+
+        </div>
+        <div class="photo-block">
+
+            <div class="photo-header-block">
+                <h2 class="photo-title">Samoyed</h2>
+                <h3 class="photo-score">SCORE: 4.6</h3>
+            </div>
+
+            <div class="photo-image-block">
+                <img class="photo-image" src="https://i.ibb.co/tY1Jcnc/wlZCfCv.jpg" alt="DOG">
+            </div>
+
+            <div class="photo-metadata-block">
+                <p class="photo-description">A very good boy.</p>
+            </div>
+
+            <div class="photo-edit-block">
+                <button>Edit this photo</button>
+                <button>Delete this photo</button>
+            </div>
+
+        </div>
+    </div>
 </main>
 
 <footer></footer>
@@ -25,3 +91,4 @@
 <script>include()</script>
 </body>
 </html>
+<!--TODO: Hacer paso 2.5 y mejorar estilos-->
